# old-timedata_visualizer

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  timedata_visualizer.jucer  timedata_visualizer.pyx  visualizer.jucer
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/timedata/component/: Light.cpp  Light.h  LightGrid.cpp  LightGrid.pyx  LightWindow.cpp  LightWindow.h  LightWindow.pyx
Source/timedata/juce/: AppCallback.h  JApplication.cpp  JApplication.h  JApplication.pyx  Math.h  RunOnMessageThread.h  STL.h
juce/LinuxMakefile/: Makefile
juce/MacOSX/timedata_visualizer_juce.xcodeproj/: project.pbxproj
juce/MacOSX/timedata_visualizer_juce.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
juce/MacOSX/timedata_visualizer_juce.xcodeproj/project.xcworkspace/xcshareddata/: timedata_visualizer_juce.xccheckout
juce/MacOSX/timedata_visualizer_juce.xcodeproj/project.xcworkspace/xcuserdata/tom.xcuserdatad/: UserInterfaceState.xcuserstate
juce/MacOSX/timedata_visualizer_juce.xcodeproj/xcuserdata/tom.xcuserdatad/xcschemes/: timedata_visualizer_juce (Static Library).xcscheme  xcschememanagement.plist
juce/VisualStudio2015/: timedata_visualizer_juce.sln  timedata_visualizer_juce.vcxproj  timedata_visualizer_juce.vcxproj.filters
src/timedata_visualizer/base/: base.h  base.pyx  callbacks.pyx  doubleBuffer.h  has_return.pyx  lock.h  stl.pyx  string.h  timestamp.pyx  wrapper.pyx
src/timedata_visualizer/component/: LightComponent.h  LightComponent_inl.h  LightGrid.h  LightWindow.cpp  LightWindow.h  LightWindow.pyx  LightWindowDesc.h  LightWindow_inl.h  snapshot.h
src/timedata_visualizer/juce/: CallPython.h  CallPython.pyx  CallPython_inl.h  JApplication.cpp  JApplication.h  JApplication.pyx  JApplication_inl.h  JuceApplication.h  JuceApplication.pyx  JuceApplication_inl.h  ProcessGlobal.pyx  README.md  commands.pyx  communication.pyx  juce_process.pyx  proxy.pyx
tests/: mp_experiments.py  mp_experiments2.py  mp_experiments3.py  shared_memory.py  single_dispatch.py  visualizer_test.py
timedata_visualizer_app/: timedata_visualizer_app.jucer
timedata_visualizer_app/JuceLibraryCode/: AppConfig.h  JuceHeader.h
timedata_visualizer_app/Source/: Main.cpp
