[metadata]
description-file = README.md

[build_sphinx]
source-dir = sphinx
build-dir  = build
all_files  = 1

[upload_sphinx]
upload-dir = build/html

[timedata_visualizer_flags]
benchmark_number = 100
benchmark_size = 10240
benchmarks = lists,pure_python
buildtype = o3
compileropt = -ffast-math
              -flto
              -fno-math-errno
              -fomit-frame-pointer
              -funroll-loops

#              -fprofile-generate
#              -ftree-vectorize
# See http://ithare.com/c-performance-common-wisdoms-and-common-wisdoms/

annotate = False
minimum_python_version = 3.4
test_pattern=*_test.py

[timedata_visualizer_dependencies]
annotate = build_ext
build_ext = generate
build_sphinx = [develop annotate]
develop = generate
documentation = build_sphinx
test = develop
copy_documentation = documentation

[timedata_visualizer_build_options]
o2 = -O2 -DNDEBUG
o3 = -O3 -DNDEBUG
debug = -O0 -DDEBUG

[timedata_visualizer_directories]
# A list of directories to delete in the clean phase.
build = build

# The directories containing the sphinx generated html code.
documentation = %(build)s/html

# The directories containing the sphinx generated html code.
genfiles = %(build)s/genfiles

# The address of the parallel directory containing the documentation tree.
documentation_repo = ../timedata_visualizer-org.github.io

[timedata_visualizer_compiler_flags]
linux = -std=c++11
        -ferror-limit=100
        -DCOMPILE_TIMESTAMP="$time"
        -DGIT_TAGS="$git_tags"
        -Wall
        -Wextra
        -Wpedantic
        -Wno-unused-function
        -Wno-extended-offsetof

darwin = %(linux)s
         -mmacosx-version-min=10.9
         -Wno-tautological-constant-out-of-range-compare

windows = -DNDEBUG
          -DWINDOWS
          /Dand=&&
          /Dnot=!
          /Dnot_eq=!=
          /Dor=||
          /Duint=size_t
          /wd4800

[timedata_visualizer_setuptools]
name = timedata_visualizer
packages = [src/py/timedata_visualizer_tests]
version = 0.8
keywords = [color cython dsp C++]
description = Juce-based visualizer for timedata color.
author = Tom Swirly
author_email = tom@swirly.com
url = https://github.com/timedata-org/timedata_visualizer
test_suite = setup.test_suite
download_url = https://github.com/timedata-org/timedata_visualizer/releases/tag/v0.8

[timedata_visualizer_code_generation]
struct_files = [timedata_visualizer/signal/render3]
output_file = build/genfiles/timedata_visualizer/genfiles.pyx
template_directory = src/pyx/timedata_visualizer/template
sources = [timedata_visualizer.pyx]
include_dirs = [src/cpp]
html_path = src
discarded_html = [timedata_visualizer.html]
clean_files = [timedata_visualizer.html timedata_visualizer.so]
