[metadata]
description-file = README.md

[build_sphinx]
source-dir = sphinx
build-dir  = build
all_files  = 1

[upload_sphinx]
upload-dir = build/html

[timedata_visualizer_flags]
build_type = o3
compileropt = -ffast-math
              -flto
              -fno-math-errno
              -fomit-frame-pointer
              -funroll-loops

#              -fprofile-generate
#              -ftree-vectorize
# See http://ithare.com/c-performance-common-wisdoms-and-common-wisdoms/

annotate = False
minimum_python_version = 3.4
test_pattern=*_test.py

[timedata_visualizer_dependencies]
build_ext = [build_juce generate]
develop = build_ext
test = develop

[timedata_visualizer_build_type]
o2 = -O2 -DNDEBUG
o3 = -O3 -DNDEBUG
debug = -O0 -DDEBUG

[timedata_visualizer_directories]
# A list of directories to delete in the clean phase.
build = build

# The directories containing the sphinx generated html code.
documentation = ${build}/html

genfiles = ${build}/genfiles

genfiles_project = ${build}/genfiles/timedata_visualizer

# The address of the parallel directory containing the documentation tree.
documentation_repo = ../timedata_visualizer-org.github.io

[timedata_visualizer_compiler_flags]
linux = -std=c++11
        -ferror-limit=100
        -DCOMPILE_TIMESTAMP="$$time"
        -DGIT_TAGS="$$git_tags"
        -Wall
        -Wextra
        -Wpedantic
        -Wno-unused-function
        -Wno-extended-offsetof

darwin = ${linux}
         -mmacosx-version-min=10.9
         -Wno-tautological-constant-out-of-range-compare

windows = -DNDEBUG
          -DWINDOWS
          /Dand=&&
          /Dnot=!
          /Dnot_eq=!=
          /Dor=||
          /Duint=size_t
          /wd4800

[timedata_visualizer_linker]
libraries=[timedata_visualizer_juce]
extra_args=[-Werror]

[timedata_visualizer_setuptools]
name = timedata_visualizer
packages = []
version = 0.7
keywords = [color cython dsp C++]
description = Juce-based visualizer for timedata color.
author = Tom Swirly
author_email = tom@swirly.com
url = https://github.com/timedata-org/timedata_visualizer
test_suite = setup.test_suite
download_url = https://github.com/timedata-org/timedata_visualizer/releases/tag/v0.8

[timedata_visualizer_code_generation]
struct_prefix = src
struct_files = [timedata_visualizer/component/LightWindowDesc.h]
output_file = build/genfiles/timedata_visualizer/genfiles.pyx
template_directory = ../timedata/src/pyx/timedata/template
html_path = src
discarded_html = [timedata_visualizer.html]

[timedata_visualizer_clean]
cython_files = [
         timedata_visualizer.html
         timedata_visualizer.so
         timedata_visualizer.cpp
         build
         ]
juce_files = [juce/**/build]

files = ${cython_files} ${juce_files}


[timedata_visualizer_extension_arguments]
name = timedata_visualizer
sources = [timedata_visualizer.pyx]
include_dirs = [src JuceLibraryCode JuceLibraryCode/modules]
